@@ -102,23 +102,11 @@ testBitfieldSizeof(void)
   ASSERT( sizeof(size1a_bf) >= 1);
   ASSERT( sizeof(size1b_bf) >= 1);
   ASSERT( sizeof(size1c_bf) >= 1);
-#if !defined (__amd64__) && !defined(__CYGWIN32__) && !defined(__MINGW32__)
-  /* assertion fails on amd64, cygwin and mingw.
-     Maybe it depends on gcc version?
-  */
-  ASSERT( sizeof(size2a_bf) >= 2);
-#endif
   ASSERT( sizeof(size2b_bf) >= 2);
   ASSERT( sizeof(size2c_bf) >= 2);
   ASSERT( sizeof(size2d_bf) >= 2);
   ASSERT( sizeof(size3a_bf) >= 2);
   ASSERT( sizeof(size1a_bf) <= sizeof(size1b_bf));
-#if !defined (__amd64__) && !defined(__CYGWIN32__) && !defined(__MINGW32__)
-  /* assertion fails on amd64, cygwin and mingw.
-     Maybe it depends on gcc version?
-   */
-  ASSERT( sizeof(size1a_bf) < sizeof(size2a_bf));
-#endif
 
   /* Some SDCC specific assertions. SDCC uses 8 bit storage units.
      Bitfields that are less than 8 bits, but would (due to earlier
